--- a/Client/src/app/pages/shared/landing/landing.html
+++ b/Client/src/app/pages/shared/landing/landing.html
@@ -19,7 +19,7 @@
           <a [routerLink]="['/register']" class="nav-links text-gray-400 text-decoration-none">
             {{"Landing.register" |translate}}
           </a>
-          <app-translate-select></app-translate-select>
+          <app-translate-select [color]="'white'"></app-translate-select>
         </nav>
       </div>
     </div>
