--- a/Client/src/app/components/shared/nav-blank/nav-blank.html
+++ b/Client/src/app/components/shared/nav-blank/nav-blank.html
@@ -1,1 +1,79 @@
-<p>nav-blank works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom sticky-top shadow-sm" >
+  <div class="container-fluid">
+    <div class="d-flex justify-content-between align-items-center w-100" >
+      <!-- Logo -->
+      <a [routerLink]="['/']" class="d-flex align-items-center gap-2 text-decoration-none">
+        <img src="./favicon.png" width="50" height="50" alt="">
+        <span class="text-secondary fs-3 fst-italic">{{"BlankNavBar.Salahly" | translate}}</span>
+      </a>
+
+      <!-- Desktop Navigation -->
+      <div class="d-none d-md-flex align-items-center gap-4">
+        <a routerLink="/" routerLinkActive="active" class="d-flex align-items-center gap-2 text-secondary nav-link">
+          <i class="fa-regular fa-house"></i>
+          <span>{{"BlankNavBar.Home" | translate}}</span>
+        </a>
+
+        <a routerLink="/browse" routerLinkActive="active" class="d-flex align-items-center gap-2 text-secondary nav-link">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <span>{{"BlankNavBar.Browse Technicians" | translate}}</span>
+        </a>
+        <div class="d-flex align-items-center gap-3">
+          <button class="btn btn-outline-secondary" (click)="navigate('/login')">{{"BlankNavBar.Login" | translate}}</button>
+          <button class="btn text-white" style="background-color: #1c1b2a;" (click)="navigate('/signup')">{{"BlankNavBar.Sign Up" | translate}}</button>
+        </div>
+        <app-translate-select [color]="'black'"></app-translate-select>
+      </div>
+
+      <!-- Mobile Menu Button -->
+      <button
+        class="navbar-toggler d-md-none border-0"
+        type="button"
+        (click)="toggleMenu()"
+      >
+      <i class=""></i>
+        <i [class]="mobileMenuOpen ? 'fa-solid fa-xmark fs-3' : 'fa-solid fa-bars fs-3'"></i>
+      </button>
+    </div>
+  </div>
+
+  <!-- Mobile Menu -->
+  @if(mobileMenuOpen){
+    <div class="d-md-none border-top bg-white">
+      <div class="px-4 py-4">
+        <a
+          routerLink="/"
+          (click)="closeMobileMenu()"
+          class="d-flex align-items-center gap-2 text-secondary nav-link py-2"
+        >
+          <i class="fa-regular fa-house"></i>
+          <span>Home</span>
+        </a>
+
+        <a
+          routerLink="/browse"
+          (click)="closeMobileMenu()"
+          class="d-flex align-items-center gap-2 text-secondary nav-link py-2"
+        >
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <span>Browse Technicals</span>
+        </a>
+        <!-- Guest -->
+        <div class="pt-3 border-top">
+          <button
+            class="btn btn-outline-secondary w-100 mb-2"
+            (click)="navigate('/login'); closeMobileMenu();"
+          >
+            Login
+          </button>
+          <button
+            class="btn btn-primary w-100"
+            (click)="navigate('/signup'); closeMobileMenu();"
+          >
+            Sign Up
+          </button>
+        </div>
+      </div>
+    </div>
+  }
+</nav>
