--- a/Client/src/app/components/shared/translate-select/translate-select.css
+++ b/Client/src/app/components/shared/translate-select/translate-select.css
@@ -1,10 +1,10 @@
 
 .lang-select {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: #fff;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: rgba(117, 117, 117, 0.1);
+  color: black;
+  border: 1px solid rgba(150, 150, 150, 0.3);
   border-radius: 6px;
-  padding: 0.3rem 1.2rem 0.3rem 0.6rem;
+  padding: 0.5rem 1.2rem 0.5rem 0.6rem;
   font-weight: 600;
   font-size: 0.9rem;
   outline: none;
