--- a/Client/src/app/layouts/blank-layout/blank-layout.html
+++ b/Client/src/app/layouts/blank-layout/blank-layout.html
@@ -1,5 +1,5 @@
 <app-nav-blank></app-nav-blank>
-<div class="container-fluid">
+<div class="">
   <router-outlet></router-outlet>
 </div>
 <!-- <app-footer></app-footer> -->
