--- a/Client/src/app/components/shared/feature-card/feature-card.html
+++ b/Client/src/app/components/shared/feature-card/feature-card.html
@@ -1,4 +1,4 @@
-<div class="feature-card bg-white p-4 rounded shadow-sm text-center" style="min-height: 220px;">
+<div class="feature-card bg-white p-4 rounded shadow-sm text-center" appHoverEffect style="min-height: 220px;">
     <div
     class="bg-primary rounded-circle d-flex align-items-center justify-content-center mx-auto mb-3"
     style="width: 3rem; height: 3rem;"
