--- a/Client/src/app/components/shared/home-banner/home-banner.html
+++ b/Client/src/app/components/shared/home-banner/home-banner.html
@@ -6,7 +6,7 @@
       <p class="lead mb-4">
         {{"HomeBanner.Connect with verified electricians, plumbers, carpenters, and more. Book services instantly and get your home issues fixed by professionals." |translate}}
       </p>
-      <div class="d-flex flex-wrap gap-3">
+      <!-- <div class="d-flex flex-wrap gap-3">
         <button class="btn btn-light btn-lg d-flex align-items-center gap-2" (click)="browse()">
           <span>{{"HomeBanner.Browse Technicians" |translate}}</span>
           <i class="bi bi-arrow-right"></i>
@@ -14,7 +14,10 @@
         <button class="btn btn-outline-light btn-lg" (click)="signup()">
           {{"HomeBanner.Sign Up Now" |translate}}
         </button>
-      </div>
+      </div> -->
+    </div>
+    <div class="mt-5 w-100">
+      <app-technician-filter></app-technician-filter>
     </div>
   </div>
 </section>
