--- a/Client/src/app/components/shared/home-banner/home-banner.css
+++ b/Client/src/app/components/shared/home-banner/home-banner.css
@@ -1,7 +1,7 @@
 .hero-section {
   background: linear-gradient(to bottom right, #2563eb, #6d28d9);
   color: #fff;
-  height: 70vh;
+  min-height: 70vh;
 }
 
 .hero-section h1,
