--- a/Client/src/app/components/shared/nav-blank/nav-blank.html
+++ b/Client/src/app/components/shared/nav-blank/nav-blank.html
@@ -2,14 +2,14 @@
   <div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center w-100" >
       <!-- Logo -->
-      <a [routerLink]="['/']" class="d-flex align-items-center gap-2 text-decoration-none">
+      <a [routerLink]="['/home']" class="d-flex align-items-center gap-2 text-decoration-none">
         <img src="./favicon.png" width="50" height="50" alt="">
         <span class="text-secondary fs-3 fst-italic">{{"BlankNavBar.Salahly" | translate}}</span>
       </a>
 
       <!-- Desktop Navigation -->
       <div class="d-none d-md-flex align-items-center gap-4">
-        <a routerLink="/" routerLinkActive="active" class="d-flex align-items-center gap-2 text-secondary nav-link">
+        <a routerLink="/home" routerLinkActive="active" class="d-flex align-items-center gap-2 text-secondary nav-link">
           <i class="fa-regular fa-house"></i>
           <span>{{"BlankNavBar.Home" | translate}}</span>
         </a>
