Add a full Customer Profile page and layout, include a Customer Guard, and update controller methods to handle image uploads through FormData.

--- a/Client/src/app/layouts/blank-layout/blank-layout.html
+++ b/Client/src/app/layouts/blank-layout/blank-layout.html
@@ -1,5 +1,7 @@
 @if (showTechnicianNavBar) {
   <app-technician-nav-bar></app-technician-nav-bar>
+} @else if (showCustomerNavBar) {
+  <app-customer-nav-bar></app-customer-nav-bar>
 } @else {
   <app-nav-blank></app-nav-blank>
 }
