--- a/Client/src/app/layouts/auth-layout/auth-layout.html
+++ b/Client/src/app/layouts/auth-layout/auth-layout.html
@@ -1,1 +1,5 @@
-<p>auth-layout works!</p>
+<app-customer-nav-bar></app-customer-nav-bar>
+<div class="">
+  <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
