Build the Service Requested page with service listing and refactor the CustomerServicesRequest controller logic.

--- a/Client/src/app/components/customer/customer-nav-bar/customer-nav-bar.html
+++ b/Client/src/app/components/customer/customer-nav-bar/customer-nav-bar.html
@@ -34,7 +34,7 @@
                 <i class="fa-regular fa-user"></i>
                 <span>{{ 'CustomerNav.Profile' | translate }}</span>
               </button>
-              <button class="dropdown-item" (click)="navigateToRequests()">
+              <button class="dropdown-item" (click)="navigate('/show-services-requested')">
                 <i class="fa-solid fa-list-check"></i>
                 <span>{{ 'CustomerNav.Requests' | translate }}</span>
               </button>
